morning update of 25-09-2023

--- a/Views/User/Signup.ejs
+++ b/Views/User/Signup.ejs
@@ -59,4 +59,5 @@
             </div>
           </div>
         </div>
-      </div>ut/footer')-%>
+      </div>
+      <%-include('../layout/footer')-%>
