--- a/Views/User/index.ejs
+++ b/Views/User/index.ejs
@@ -45,15 +45,12 @@
                     <button class="btn btn-outline-light btn-lg px-5" type="submit">
                       Login
                     </button>
-                    <a href="/user/SignUp" class="no-under">
-                      <button class="btn btn-outline-light btn-lg px-5" type="button" >
-                        Sign Up
-                      </button>
-                    </a>
+                    <a href="/user/SignUp" class="no-under btn btn-outline-light btn-lg px-5">Sign Up</a>
                     <br>
+                    <a href="/user/google" class="no-under btn btn-outline-light btn-lg px-5">Sign in with google</a>
                     <br>
                     <div >
-                      <a class="text-light no-under" href="/admin">Admin login</a>
+                      <a class="text-light no-under" href="/admin/login">Admin login</a>
                     </div>
                   </form>
                 </div>
